--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-modern-drawer": "^1.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
